# Gymnasium-Robotics

./: .buildinfo  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  CNAME  CODE_OF_CONDUCT.rst  LICENSE.txt  MANIFEST.in  README.md  asdf.txt  franka_test.py  index.html  objects.inv  py.Dockerfile  pyproject.toml  requirements.txt  robot_test.py  searchindex.js  setup.cfg  setup.py  test.py  test_jac.py  test_requirements.txt  test_version.py  versioneer.py
.github/ISSUE_TEMPLATE/: bug.md  proposal.md
.github/docker/: py.Dockerfile
.github/workflows/: build-docs-dev.yml  build-docs-version.yml  build-publish.yml  build.yml  gh-pages.yml  lint_python.yml  manual-build-docs-version.yml  pre-commit.yml  pypi-publish.yml  pypi.yml
1.3.2/: .buildinfo  searchindex.js
1.3.2/_modules/: index.html
1.3.2/_static/css/: env_pages.css
1.3.2/content/multi-goal_api/: index.html
1.3.2/envs/adroit_hand/: index.html
1.3.2/envs/franka_kitchen/: index.html
1.3.2/search/: index.html
README/: index.html
_modules/: index.html
_modules/gymnasium_robotics/core/: index.html
_static/: documentation_options.js
content/installation/: index.html
content/multi-goal_api/: index.html
docs/: FetchPickAndPlace.md  FetchPush.md  FetchReach.md  FetchSlide.md  README.md  conf.py  index.md  release_notes.md  requirements.txt
docs/_scripts/: gen_envs_display.py  gen_gifs.py  gen_mds.py
docs/content/: installation.md  multi-goal_api.md
docs/envs/: fetch.md  index.md  shadow_dexterous_hand.md  shadow_dexterous_hand_with_touch_sensors.md
docs/envs/MaMuJoCo/: index.md  ma_ant.md  ma_coupled_half_cheetah.md  ma_half_cheetah.md  ma_hooper.md  ma_hopper.md  ma_humanoid.md  ma_humanoid_standup.md  ma_multiagentswimmer.md  ma_pusher.md  ma_reacher.md  ma_single.md  ma_swimmer.md  ma_walker2d.md
docs/envs/adroit_hand/: index.md
docs/envs/fetch/: index.md
docs/envs/franka_kitchen/: index.md
docs/envs/hand/: index.md
docs/envs/hand_touch/: index.md
docs/envs/maze/: index.md
docs/envs/shadow_dexterous_hand/: index.md
docs/release_notes/: index.md
docs/scripts/: gen_envs_display.py  gen_gifs.py  gen_index.py  gen_mds.py
docs/source/: conf.py  index.md
envs/: index.html
envs/MaMuJoCo/: index.html
envs/MaMuJoCo/ma_ant/: index.html
envs/MaMuJoCo/ma_coupled_half_cheetah/: index.html
envs/MaMuJoCo/ma_half_cheetah/: index.html
envs/MaMuJoCo/ma_hooper/: index.html
envs/MaMuJoCo/ma_hopper/: index.html
envs/MaMuJoCo/ma_humanoid/: index.html
envs/MaMuJoCo/ma_humanoid_standup/: index.html
envs/MaMuJoCo/ma_multiagentswimmer/: index.html
envs/MaMuJoCo/ma_pusher/: index.html
envs/MaMuJoCo/ma_reacher/: index.html
envs/MaMuJoCo/ma_single/: index.html
envs/MaMuJoCo/ma_swimmer/: index.html
envs/MaMuJoCo/ma_walker2d/: index.html
envs/adroit_hand/: index.html
envs/adroit_hand/adroit_door/: index.html
envs/adroit_hand/adroit_hammer/: index.html
envs/adroit_hand/adroit_pen/: index.html
envs/adroit_hand/adroit_relocate/: index.html
envs/fetch/: index.html
envs/fetch/FetchPickAndPlace/: index.html
envs/fetch/FetchPush/: index.html
envs/fetch/FetchReach/: index.html
envs/fetch/FetchSlide/: index.html
envs/fetch/pick_and_place/: index.html
envs/fetch/push/: index.html
envs/fetch/reach/: index.html
envs/fetch/slide/: index.html
envs/franka_kitchen/: index.html
envs/franka_kitchen/franka_kitchen/: index.html
envs/hand/: index.html
envs/hand/HandBlock/: index.html
envs/hand/HandBlockTouchSensors/: index.html
envs/hand/HandEgg/: index.html
envs/hand/HandEggTouchSensors/: index.html
envs/hand/HandPen/: index.html
envs/hand/HandPenTouchSensors/: index.html
envs/hand/HandReach/: index.html
envs/hand/ManipulateTouchSensors/: index.html
envs/hand_touch/: index.html
envs/hand_touch/HandBlockTouchSensors/: index.html
envs/hand_touch/HandEggTouchSensors/: index.html
envs/hand_touch/HandPenTouchSensors/: index.html
envs/hand_touch/ManipulateTouchSensors/: index.html
envs/maze/: index.html
envs/maze/ant_maze/: index.html
envs/maze/point_maze/: index.html
envs/shadow_dexterous_hand/: index.html
envs/shadow_dexterous_hand/manipulate_block/: index.html
envs/shadow_dexterous_hand/manipulate_block_touch_sensors/: index.html
envs/shadow_dexterous_hand/manipulate_egg/: index.html
envs/shadow_dexterous_hand/manipulate_egg_touch_sensors/: index.html
envs/shadow_dexterous_hand_with_touch_sensors/: index.html
genindex/: index.html
gym_robotics/: __init__.py  _version.py  core.py
gym_robotics/envs/: __init__.py  fetch_env.py  hand_env.py  robot_env.py  robot_env_v2.py
gym_robotics/envs/fetch/: push.py  (+3 more)
gym_robotics/utils/: mujoco.py  mujoco_py.py  mujoco_py_utils.py  mujoco_utils.py  rotations.py
gymnasium_robotics/: Gymnasium-Robotics.code-workspace  __init__.py  _version.py  core.py
gymnasium_robotics/envs/: __init__.py  fetch_env.py  hand_env.py  robot_env.py
gymnasium_robotics/utils/: controller_utils.py  mujoco_py_utils.py  mujoco_utils.py  rotations.py
main/: .buildinfo  404.html  index.html  objects.inv  searchindex.js
main/README/: index.html
main/_modules/: index.html
main/_static/: documentation_options.js
main/genindex/: index.html
main/release_notes/: index.html
main/search/: index.html
release_notes/: index.html
search/: index.html
tests/: test_envs.py  utils.py
v1.2.1/: .buildinfo  searchindex.js
v1.2.1/README/: index.html
v1.2.2/: 404.html
v1.2.3/: .buildinfo
v1.2.3/search/: index.html
v1.2.4/: 404.html  index.html  objects.inv  searchindex.js
v1.2.4/_modules/: index.html
v1.2.4/genindex/: index.html
v1.2.4/release_notes/: index.html
v1.3.0/: .buildinfo
v1.3.0/release_notes/: index.html
v1.3.0/search/: index.html
v1.3.1/: .buildinfo  index.html
v1.3.1/genindex/: index.html
v1.3.1/release_notes/: index.html
v1.3.1/search/: index.html
v1.4.1/: .buildinfo  index.html  searchindex.js
v1.4.1/README/: index.html
v1.4.1/genindex/: index.html
v1.4.2/: .buildinfo  searchindex.js
v1.4.2/release_notes/: index.html
(+330 files in other folders)
