[tool.pyright]
include = [
    "gym_robotics/**",
    "tests/**"
]

exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/_version.py"
]


strict = [

]

# This is required as the CI pre-commit does not download the module (i.e. numpy)
#   Therefore, we have to ignore missing imports
reportMissingImports = "none"
typeCheckingMode = "basic"
pythonVersion = "3.7"
typeshedPath = "typeshed"
enableTypeIgnoreComments = true


reportGeneralTypeIssues = "none"  # -> commented out raises 489 errors
# reportUntypedFunctionDecorator = "none"  # -> pytest.mark.parameterize issues
reportOptionalMemberAccess = "none" # -> raise _version.py error

[build-system]
requires = ["setuptools", "versioneer==0.24"]
build-backend = "setuptools.build_meta"