# Package ######################################################################

[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gymnasium-robotics"
description = "RL Robotics environments with Gymnasium API."
readme = "README.md"
requires-python = ">= 3.10"
authors = [{ name = "Farama Foundation", email = "contact@farama.org" }]
license = { text = "MIT License" }
keywords = ["Reinforcement Learning", "Gymnasium", "RL", "AI", "Robotics"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]
dependencies = [
    "mujoco>=2.2.0",
    "numpy>=1.21.0",
    "gymnasium>=1.2.0",
    "PettingZoo>=1.23.0",
    "Jinja2>=3.0.3",
    "imageio",
    "setuptools",
    "packaging",
]
dynamic = ["version"]

[project.optional-dependencies]
# Update dependencies in `all` if any are added or removed
testing = [
	"pytest==7.0.1",
	"mujoco_py_cython3",
	"PettingZoo>=1.23.0",
	"Jinja2>=3.0.3",
]
mujoco_py = ["mujoco_py_cython3"]
mujoco_py_original = ["mujoco_py<2.2,>=2.1", "cython<3"]

[project.urls]
Homepage = "https://farama.org"
Repository = "https://github.com/Farama-Foundation/Gymnasium-Robotics"
Documentation = "https://robotics.farama.org"
"Bug Report" = "https://github.com/Farama-Foundation/Gymnasium-Robotics/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
gymnasium_robotics = [
    "envs/assets/LICENSE.md",
    "envs/assets/**/*.xml",
    "envs/assets/**/*.stl",
    "envs/assets/**/*.png",
    "envs/multiagent_mujoco/assets/*.xml*",
    "envs/mujoco/assets/*.xml",
]

# Linters and Test tools #######################################################

[tool.black]
safe = true

[tool.isort]
atomic = true
profile = "black"
src_paths = ["gymnasium_robotics", "tests"]

[tool.pyright]
include = [
    "gymnasium_robotics/**",
    "tests/**"
]
exclude = [
    "**/node_modules",
    "**/__pycache__",
]
strict = []

typeCheckingMode = "basic"
pythonVersion = "3.10"
pythonPlatform = "All"
typeshedPath = "typeshed"
enableTypeIgnoreComments = true

# This is required as the CI pre-commit does not download the module (i.e. numpy)
#   Therefore, we have to ignore missing imports
reportMissingImports = "none"
reportUnboundVariable = "warning"

reportGeneralTypeIssues = "none"  # -> commented out raises 489 errors
